--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -2,99 +2,398 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "id": "e4f0df33-4298-4aca-a570-6d5b2f3118c0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/harvey/Documents/Studies/Computer Science/Deep Learning/HW1P2'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pwd"
+    "%pwd\n",
+    "GLOBALTEST = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 106,
    "id": "bdbb26a0-1138-4dc0-ae6b-104a01471bde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch.nn.functional as F\n",
+    "import time\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "from torch.utils import data\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
+   "id": "09210502-6c1f-4c6f-a487-5e5f257df861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No cuda available\n"
+     ]
+    }
+   ],
+   "source": [
+    "cuda = torch.cuda.is_available()\n",
+    "if cuda: print(\"Using cuda!!\") \n",
+    "else: print(\"No cuda available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "615ffa74-86fa-4ddc-a9d0-be35cbf53528",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = np.load(\"hw1p2-toy-problem/toy_train_data.npy\", allow_pickle=True)"
+    "train_data = np.load(\"Data/toy_train_data.npy\", allow_pickle=True)\n",
+    "train_label = np.load(\"Data/toy_train_label.npy\", allow_pickle=True)\n",
+    "test_data = np.load(\"Data/toy_test_data.npy\", allow_pickle=True)\n",
+    "test_label = np.load(\"Data/toy_test_label.npy\", allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "577277e5-074d-4834-bdfa-334ea6cb3ad7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1000,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000,)\n",
+      "(1184, 40)\n"
+     ]
     }
    ],
    "source": [
-    "train.shape"
+    "print(train_data.shape)\n",
+    "print(train_data[0].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ebb1185c-7c11-4b39-93fd-e8e1cf9cf97f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000,)\n",
+      "(1184,)\n"
+     ]
     }
    ],
    "source": [
-    "type(train)"
+    "print(train_label.shape)\n",
+    "print(train_label[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "6f627f37-1f75-4a59-b99d-12374b1cb64c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDataset(data.Dataset):\n",
+    "    def __init__(self, data, label, context_size = 1):\n",
+    "        # data and label nparrays directly loaded from files\n",
+    "        N = len(data)\n",
+    "        X = []\n",
+    "        Y = []\n",
+    "        locator = []\n",
+    "        ctr = 0\n",
+    "        for i in range(N):\n",
+    "            xi = torch.from_numpy(data[i]).float()\n",
+    "            yi = torch.from_numpy(label[i]).long()\n",
+    "            X.append(xi)\n",
+    "            Y.append(yi)\n",
+    "            li = xi.shape[0]\n",
+    "            for j in range(li):\n",
+    "                locator.append((i, j)) #ith piece, jth time frame\n",
+    "                ctr += 1\n",
+    "        \n",
+    "        self.X = X\n",
+    "        self.Y = Y\n",
+    "        self.locator = locator\n",
+    "        self.context_size = context_size\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.locator)\n",
+    "\n",
+    "    def __getitem__(self,index):\n",
+    "        i, j = self.locator[index]\n",
+    "        left = j - self.context_size\n",
+    "        right = j + self.context_size # both sides inclusive\n",
+    "        if GLOBALTEST: print(left, right) \n",
+    "        X = self.X[i][j:j+1]\n",
+    "        if left < 0:\n",
+    "            XL = self.X[i][:j]\n",
+    "            if GLOBALTEST: print(XL.shape) \n",
+    "            XL = F.pad(input=XL, pad=(0, 0, self.context_size-XL.shape[0], 0), mode='constant', value=0)\n",
+    "        else:\n",
+    "            XL = self.X[i][left:j]\n",
+    "        \n",
+    "        if right >= self.X[i].shape[0]:\n",
+    "            \n",
+    "            XR = self.X[i][j+1:]\n",
+    "            XR = F.pad(input=XR, pad=(0, 0, 0, self.context_size-XR.shape[0]), mode='constant', value=0)\n",
+    "        else:\n",
+    "            XR = self.X[i][j+1:right+1]\n",
+    "        \n",
+    "        if GLOBALTEST:\n",
+    "            print(\"XL shape:\", XL.shape)\n",
+    "            print(\"X shape:\", X.shape)\n",
+    "            print(\"XR shape:\", XR.shape)\n",
+    "        \n",
+    "        X = torch.cat((XL,X,XR), 0).reshape(-1)\n",
+    "        Y = self.Y[i][j]\n",
+    "        \n",
+    "        return X,Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "3708102b-4b63-45a2-ae93-ba76eee3a9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_workers = 8 if cuda else 0 \n",
+    "\n",
+    "# Training\n",
+    "train_dataset = MyDataset(train_data, train_label)\n",
+    "\n",
+    "train_loader_args = dict(shuffle=True, batch_size=256, num_workers=num_workers, pin_memory=True) if cuda\\\n",
+    "                    else dict(shuffle=True, batch_size=64)\n",
+    "train_loader = data.DataLoader(train_dataset, **train_loader_args)\n",
+    "\n",
+    "# Testing\n",
+    "test_dataset = MyDataset(test_data, test_label)\n",
+    "\n",
+    "test_loader_args = dict(shuffle=False, batch_size=256, num_workers=num_workers, pin_memory=True) if cuda\\\n",
+    "                    else dict(shuffle=False, batch_size=1)\n",
+    "test_loader = data.DataLoader(test_dataset, **test_loader_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "c6e469cc-6e0e-40c5-acfd-757cc59f2928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Simple_MLP(nn.Module):\n",
+    "    def __init__(self, size_list):\n",
+    "        super(Simple_MLP, self).__init__()\n",
+    "        layers = []\n",
+    "        self.size_list = size_list\n",
+    "        for i in range(len(size_list) - 2):\n",
+    "            layers.append(nn.Linear(size_list[i],size_list[i+1]))\n",
+    "            layers.append(nn.ReLU())\n",
+    "        layers.append(nn.Linear(size_list[-2], size_list[-1]))\n",
+    "        self.net = nn.Sequential(*layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "ee97440d-63c0-4d94-a71e-b4042f75cc8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple_MLP(\n",
+      "  (net): Sequential(\n",
+      "    (0): Linear(in_features=120, out_features=256, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=256, out_features=71, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Simple_MLP([40*3, 256, 71])\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters())\n",
+    "device = torch.device(\"cuda\" if cuda else \"cpu\")\n",
+    "model.to(device)\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "3e018de2-8cc1-4b40-ad83-a407fb5c2204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, train_loader, criterion, optimizer):\n",
+    "    model.train()\n",
+    "\n",
+    "    running_loss = 0.0\n",
+    "    \n",
+    "    start_time = time.time()\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):   \n",
+    "        optimizer.zero_grad()   # .backward() accumulates gradients\n",
+    "        data = data.to(device)\n",
+    "        target = target.to(device) # all data & model on same device\n",
+    "\n",
+    "        outputs = model(data)\n",
+    "        loss = criterion(outputs, target)\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    \n",
+    "    running_loss /= len(train_loader)\n",
+    "    print('Training Loss: ', running_loss, 'Time: ',end_time - start_time, 's')\n",
+    "    return running_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "bf70a7a2-3f8d-4df6-872a-770f1784ce7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(model, test_loader, criterion):\n",
+    "    with torch.no_grad():\n",
+    "        model.eval()\n",
+    "\n",
+    "        running_loss = 0.0\n",
+    "        total_predictions = 0.0\n",
+    "        correct_predictions = 0.0\n",
+    "\n",
+    "        for batch_idx, (data, target) in enumerate(test_loader):   \n",
+    "            data = data.to(device)\n",
+    "            target = target.to(device)\n",
+    "\n",
+    "            outputs = model(data)\n",
+    "\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total_predictions += target.size(0)\n",
+    "            correct_predictions += (predicted == target).sum().item()\n",
+    "\n",
+    "            loss = criterion(outputs, target).detach()\n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "\n",
+    "        running_loss /= len(test_loader)\n",
+    "        acc = (correct_predictions/total_predictions)*100.0\n",
+    "        print('Testing Loss: ', running_loss)\n",
+    "        print('Testing Accuracy: ', acc, '%')\n",
+    "        return running_loss, acc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f627f37-1f75-4a59-b99d-12374b1cb64c",
+   "id": "95651bbc-1eca-4ac7-8bef-fd68d71acd9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Loss:  1.8926524698527425 Time:  44.995628118515015 s\n",
+      "Testing Loss:  1.9518848050249218\n",
+      "Testing Accuracy:  47.80521262002744 %\n",
+      "====================\n",
+      "Training Loss:  1.785332680759184 Time:  42.8352792263031 s\n",
+      "Testing Loss:  1.8243983417780156\n",
+      "Testing Accuracy:  48.69684499314129 %\n",
+      "====================\n",
+      "Training Loss:  1.7701476958227087 Time:  43.2233247756958 s\n",
+      "Testing Loss:  1.7874549788884992\n",
+      "Testing Accuracy:  50.06858710562414 %\n",
+      "====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 10\n",
+    "Train_loss = []\n",
+    "Test_loss = []\n",
+    "Test_acc = []\n",
+    "\n",
+    "for i in range(n_epochs):\n",
+    "    train_loss = train_epoch(model, train_loader, criterion, optimizer)\n",
+    "    test_loss, test_acc = test_model(model, test_loader, criterion)\n",
+    "    Train_loss.append(train_loss)\n",
+    "    Test_loss.append(test_loss)\n",
+    "    Test_acc.append(test_acc)\n",
+    "    print('='*20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3617de4d-cdf9-4d65-83ce-d77723734bfe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.title('Training Loss')\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.plot(Train_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d67b3f3-7fd3-49df-ab43-7a751442d9fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title('Test Loss')\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.plot(Test_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78443df9-83a8-4bf1-b1f0-99d029258539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title('Test Accuracy')\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel('Accuracy (%)')\n",
+    "plt.plot(Test_acc)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
