--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "e01f84b9-9c40-4a26-98ae-744d77d546f4",
    "metadata": {},
    "outputs": [
@@ -12,39 +12,27 @@
      "text": [
       "Collecting kaggle\n",
       "  Downloading kaggle-1.5.12.tar.gz (58 kB)\n",
-      "     |████████████████████████████████| 58 kB 2.3 MB/s            \n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.10 in /home/studio-lab-user/.conda/envs/cv/lib/python3.9/site-packages (from kaggle) (1.16.0)\n",
-      "Collecting certifi\n",
-      "  Downloading certifi-2021.10.8-py2.py3-none-any.whl (149 kB)\n",
-      "     |████████████████████████████████| 149 kB 4.9 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil in /home/studio-lab-user/.conda/envs/cv/lib/python3.9/site-packages (from kaggle) (2.8.2)\n",
-      "Collecting requests\n",
-      "  Downloading requests-2.26.0-py2.py3-none-any.whl (62 kB)\n",
-      "     |████████████████████████████████| 62 kB 2.3 MB/s             \n",
-      "\u001b[?25hCollecting tqdm\n",
-      "  Downloading tqdm-4.62.3-py2.py3-none-any.whl (76 kB)\n",
-      "     |████████████████████████████████| 76 kB 4.8 MB/s             \n",
-      "\u001b[?25hCollecting python-slugify\n",
+      "Requirement already satisfied: six>=1.10 in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (1.16.0)\n",
+      "Requirement already satisfied: certifi in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (2021.10.8)\n",
+      "Requirement already satisfied: python-dateutil in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (2.8.2)\n",
+      "Requirement already satisfied: requests in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (2.26.0)\n",
+      "Requirement already satisfied: tqdm in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (4.62.3)\n",
+      "Collecting python-slugify\n",
       "  Downloading python_slugify-5.0.2-py2.py3-none-any.whl (6.7 kB)\n",
-      "Collecting urllib3\n",
-      "  Downloading urllib3-1.26.7-py2.py3-none-any.whl (138 kB)\n",
-      "     |████████████████████████████████| 138 kB 6.1 MB/s            \n",
-      "\u001b[?25hCollecting text-unidecode>=1.3\n",
+      "Requirement already satisfied: urllib3 in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from kaggle) (1.26.7)\n",
+      "Collecting text-unidecode>=1.3\n",
       "  Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
-      "     |████████████████████████████████| 78 kB 7.2 MB/s             \n",
-      "\u001b[?25hCollecting charset-normalizer~=2.0.0\n",
-      "  Downloading charset_normalizer-2.0.9-py3-none-any.whl (39 kB)\n",
-      "Collecting idna<4,>=2.5\n",
-      "  Downloading idna-3.3-py3-none-any.whl (61 kB)\n",
-      "     |████████████████████████████████| 61 kB 6.7 MB/s             \n",
-      "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
-      "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73051 sha256=6734efa97d6e655e88d3f1de257c223238b6893d2c9c7c9d7ea457293f0bb715\n",
-      "  Stored in directory: /home/studio-lab-user/.cache/pip/wheels/ac/b2/c3/fa4706d469b5879105991d1c8be9a3c2ef329ba9fe2ce5085e\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from requests->kaggle) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from requests->kaggle) (2.0.9)\n",
+      "Requirement already satisfied: colorama in d:\\software files\\anaconda3\\envs\\torch2\\lib\\site-packages (from tqdm->kaggle) (0.4.4)\n",
+      "Building wheels for collected packages: kaggle\n",
+      "  Building wheel for kaggle (setup.py): started\n",
+      "  Building wheel for kaggle (setup.py): finished with status 'done'\n",
+      "  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73051 sha256=f7d15c821b1940be1bd5766085e1b653e81cbb77443db53f25bfe176700065e9\n",
+      "  Stored in directory: c:\\users\\yubin\\appdata\\local\\pip\\cache\\wheels\\ac\\b2\\c3\\fa4706d469b5879105991d1c8be9a3c2ef329ba9fe2ce5085e\n",
       "Successfully built kaggle\n",
-      "Installing collected packages: urllib3, text-unidecode, idna, charset-normalizer, certifi, tqdm, requests, python-slugify, kaggle\n",
-      "Successfully installed certifi-2021.10.8 charset-normalizer-2.0.9 idna-3.3 kaggle-1.5.12 python-slugify-5.0.2 requests-2.26.0 text-unidecode-1.3 tqdm-4.62.3 urllib3-1.26.7\n"
+      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
+      "Successfully installed kaggle-1.5.12 python-slugify-5.0.2 text-unidecode-1.3\n"
      ]
     }
    ],
@@ -54,51 +42,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "41feb602-1404-44fd-97eb-034f877337ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The syntax of the command is incorrect.\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir ~/.kaggle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5a33daa1-8862-4e0c-9963-921619db6e75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/studio-lab-user/sagemaker-studiolab-notebooks/HW1P2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "5b626017-0323-484e-b383-2b650470cb22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/studio-lab-user/.kaggle/kaggle.json'\n",
-      "Downloading idl-fall2021-hw1p2.zip to /home/studio-lab-user/sagemaker-studiolab-notebooks/HW1P2\n",
-      "100%|██████████████████████████████████████▊| 2.39G/2.40G [00:26<00:00, 115MB/s]\n",
-      "100%|██████████████████████████████████████| 2.40G/2.40G [00:27<00:00, 95.5MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!kaggle competitions download -c idl-fall2021-hw1p2"
+    "# !kaggle competitions download -c idl-fall2021-hw1p2"
    ]
   },
   {
@@ -141,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71a25043-bfea-4ef3-abe4-31793e5ef46d",
    "metadata": {},
    "outputs": [
@@ -149,12 +126,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/bin/sh: 1: y: not found\n"
+      "^C\n"
      ]
     }
    ],
    "source": [
-    "!y"
+    "!conda install matplotlib"
    ]
   },
   {
@@ -170,10 +147,21 @@
    "execution_count": 1,
    "id": "e4f0df33-4298-4aca-a570-6d5b2f3118c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\After the mac\\\\DeepLearning HW1P2\\\\Frame-Level-Speech-Classification'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%pwd\n",
-    "GLOBALTEST = False"
+    "GLOBALTEST = False\n",
+    "%pwd"
    ]
   },
   {
@@ -231,10 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = np.load(\"Data/toy_train_data.npy\", allow_pickle=True)\n",
-    "train_label = np.load(\"Data/toy_train_label.npy\", allow_pickle=True)\n",
-    "test_data = np.load(\"Data/toy_val_data.npy\", allow_pickle=True)\n",
-    "test_label = np.load(\"Data/toy_val_label.npy\", allow_pickle=True)"
+    "train_data = np.load(\"Data/train.npy\", allow_pickle=True)\n",
+    "train_label = np.load(\"Data/train_labels.npy\", allow_pickle=True)\n",
+    "test_data = np.load(\"Data/dev.npy\", allow_pickle=True)\n",
+    "test_label = np.load(\"Data/dev_labels.npy\", allow_pickle=True)"
    ]
   },
   {
@@ -247,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1000,)\n",
+      "(14542,)\n",
       "(1184, 40)\n"
      ]
     }
@@ -267,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1000,)\n",
+      "(14542,)\n",
       "(1184,)\n"
      ]
     }
@@ -275,6 +263,19 @@
    "source": [
     "print(train_label.shape)\n",
     "print(train_label[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "524efb86-d1e4-43a3-a4a1-d4401d8519dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = train_data[:100]\n",
+    "train_label = train_label[:100]\n",
+    "test_data = test_data[:30]\n",
+    "test_label = test_label[:30]"
    ]
   },
   {
@@ -287,66 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6f627f37-1f75-4a59-b99d-12374b1cb64c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(data.Dataset):\n",
-    "    def __init__(self, data, label, context_size = 1):\n",
-    "        # data and label nparrays directly loaded from files\n",
-    "        N = len(data)\n",
-    "        X = []\n",
-    "        Y = []\n",
-    "        locator = []\n",
-    "        ctr = 0\n",
-    "        for i in range(N):\n",
-    "            xi = torch.from_numpy(data[i]).float()\n",
-    "            yi = torch.from_numpy(label[i]).long()\n",
-    "            X.append(xi)\n",
-    "            Y.append(yi)\n",
-    "            li = xi.shape[0]\n",
-    "            for j in range(li):\n",
-    "                locator.append((i, j)) #ith piece, jth time frame\n",
-    "                ctr += 1\n",
-    "        \n",
-    "        self.X = X\n",
-    "        self.Y = Y\n",
-    "        self.locator = locator\n",
-    "        self.context_size = context_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.locator)\n",
-    "\n",
-    "    def __getitem__(self,index):\n",
-    "        i, j = self.locator[index]\n",
-    "        left = j - self.context_size\n",
-    "        right = j + self.context_size # both sides inclusive\n",
-    "        if GLOBALTEST: print(left, right) \n",
-    "        X = self.X[i][j:j+1]\n",
-    "        if left < 0:\n",
-    "            XL = self.X[i][:j]\n",
-    "            if GLOBALTEST: print(XL.shape) \n",
-    "            XL = F.pad(input=XL, pad=(0, 0, self.context_size-XL.shape[0], 0), mode='constant', value=0)\n",
-    "        else:\n",
-    "            XL = self.X[i][left:j]\n",
-    "        \n",
-    "        if right >= self.X[i].shape[0]:\n",
-    "            \n",
-    "            XR = self.X[i][j+1:]\n",
-    "            XR = F.pad(input=XR, pad=(0, 0, 0, self.context_size-XR.shape[0]), mode='constant', value=0)\n",
-    "        else:\n",
-    "            XR = self.X[i][j+1:right+1]\n",
-    "        \n",
-    "        if GLOBALTEST:\n",
-    "            print(\"XL shape:\", XL.shape)\n",
-    "            print(\"X shape:\", X.shape)\n",
-    "            print(\"XR shape:\", XR.shape)\n",
-    "        \n",
-    "        X = torch.cat((XL,X,XR), 0).reshape(-1)\n",
-    "        Y = self.Y[i][j]\n",
-    "        \n",
-    "        return X,Y"
+    "from dataset import MyDataset"
    ]
   },
   {
@@ -359,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3708102b-4b63-45a2-ae93-ba76eee3a9c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "num_workers = 4 if cuda else 0 \n",
-    "context_size = 5\n",
+    "context_size = 3\n",
     "\n",
     "# Training\n",
     "train_dataset = MyDataset(train_data, train_label, context_size = context_size)\n",
@@ -379,7 +326,31 @@
     "\n",
     "test_loader_args = dict(shuffle=False, batch_size=256, num_workers=num_workers, pin_memory=True) if cuda\\\n",
     "                    else dict(shuffle=False, batch_size=1)\n",
-    "test_loader = data.DataLoader(test_dataset, **test_loader_args)"
+    "test_loader = data.DataLoader(test_dataset, **test_loader_args)\n",
+    "\n",
+    "del train_data\n",
+    "del test_data\n",
+    "del train_label\n",
+    "del test_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ebb41f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_dataset))\n",
+    "# print(list(test_loader))"
    ]
   },
   {
@@ -394,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c6e469cc-6e0e-40c5-acfd-757cc59f2928",
    "metadata": {},
    "outputs": [],
@@ -416,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ee97440d-63c0-4d94-a71e-b4042f75cc8c",
    "metadata": {},
    "outputs": [
@@ -426,20 +397,20 @@
      "text": [
       "Simple_MLP(\n",
       "  (net): Sequential(\n",
-      "    (0): Linear(in_features=440, out_features=256, bias=True)\n",
+      "    (0): Linear(in_features=280, out_features=256, bias=True)\n",
       "    (1): ReLU()\n",
       "    (2): Linear(in_features=256, out_features=128, bias=True)\n",
       "    (3): ReLU()\n",
-      "    (4): Linear(in_features=128, out_features=64, bias=True)\n",
+      "    (4): Linear(in_features=128, out_features=128, bias=True)\n",
       "    (5): ReLU()\n",
-      "    (6): Linear(in_features=64, out_features=71, bias=True)\n",
+      "    (6): Linear(in_features=128, out_features=71, bias=True)\n",
       "  )\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "model = Simple_MLP([40*(2*context_size+1), 256, 128, 64, 71])\n",
+    "model = Simple_MLP([40*(2*context_size+1), 256, 128, 128, 71])\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr = 1e-4)\n",
     "device = torch.device(\"cuda\" if cuda else \"cpu\")\n",
@@ -457,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3e018de2-8cc1-4b40-ad83-a407fb5c2204",
    "metadata": {},
    "outputs": [],
@@ -489,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "bf70a7a2-3f8d-4df6-872a-770f1784ce7a",
    "metadata": {},
    "outputs": [],
@@ -533,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "95651bbc-1eca-4ac7-8bef-fd68d71acd9e",
    "metadata": {},
    "outputs": [
@@ -541,40 +512,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss:  1.3542344530683506 Time:  22.649085521697998 s\n",
-      "Testing Loss:  1.7564266423478512\n",
-      "Testing Accuracy:  50.524049985736355 %\n",
+      "Training Loss:  4.397214889526367 Time:  23.874462366104126 s\n",
+      "Testing Loss:  4.285812854766846\n",
+      "Testing Accuracy:  0.0 %\n",
       "====================\n",
-      "Training Loss:  1.2581681161084723 Time:  22.616214990615845 s\n",
-      "Testing Loss:  1.701590466160345\n",
-      "Testing Accuracy:  51.9392998588455 %\n",
+      "Training Loss:  4.2109527587890625 Time:  6.69052791595459 s\n",
+      "Testing Loss:  4.245952606201172\n",
+      "Testing Accuracy:  0.0 %\n",
       "====================\n",
-      "Training Loss:  1.1987913167360824 Time:  22.612998247146606 s\n",
-      "Testing Loss:  1.6958526370649654\n",
-      "Testing Accuracy:  52.39129065601647 %\n",
+      "Training Loss:  4.030324459075928 Time:  6.852315187454224 s\n",
+      "Testing Loss:  4.211531639099121\n",
+      "Testing Accuracy:  0.0 %\n",
       "====================\n",
-      "Training Loss:  1.156319332694856 Time:  22.590041399002075 s\n",
-      "Testing Loss:  1.649172333405481\n",
-      "Testing Accuracy:  53.48570115998622 %\n",
+      "Training Loss:  3.855067491531372 Time:  7.577102422714233 s\n",
+      "Testing Loss:  4.181249141693115\n",
+      "Testing Accuracy:  1.0 %\n",
       "====================\n",
-      "Training Loss:  1.1237769034819873 Time:  22.500128984451294 s\n",
-      "Testing Loss:  1.6430865552188096\n",
-      "Testing Accuracy:  53.96696021369532 %\n",
-      "====================\n",
-      "Training Loss:  1.097457647678187 Time:  22.473544597625732 s\n",
-      "Testing Loss:  1.651182627310685\n",
-      "Testing Accuracy:  53.87063430610151 %\n",
-      "====================\n",
-      "Training Loss:  1.0756994876718795 Time:  22.687042474746704 s\n",
-      "Testing Loss:  1.6432378613270855\n",
-      "Testing Accuracy:  54.15775960758307 %\n",
-      "====================\n",
-      "Training Loss:  1.057174422356573 Time:  22.6662495136261 s\n"
+      "Training Loss:  3.685511589050293 Time:  6.970822811126709 s\n",
+      "Testing Loss:  4.155268669128418\n",
+      "Testing Accuracy:  2.0 %\n",
+      "====================\n"
      ]
     }
    ],
    "source": [
-    "n_epochs = 20\n",
+    "n_epochs = 5\n",
     "save = True\n",
     "Train_loss = []\n",
     "Test_loss = []\n",
@@ -611,7 +573,8 @@
     "plt.ylabel('Loss')\n",
     "plt.plot(Train_loss, label='Training Loss')\n",
     "plt.plot(Test_loss, label = 'Test Loss')\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -624,7 +587,8 @@
     "plt.title('Test Accuracy')\n",
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel('Accuracy (%)')\n",
-    "plt.plot(Test_acc)"
+    "plt.plot(Test_acc)\n",
+    "plt.show()"
    ]
   },
   {
@@ -646,9 +610,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv:Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -660,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
