Trained to 65% in 5 epoch. Better organizing

--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -272,10 +272,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = train_data[:100]\n",
-    "train_label = train_label[:100]\n",
-    "test_data = test_data[:30]\n",
-    "test_label = test_label[:30]"
+    "# train_data = train_data\n",
+    "# train_label = train_label\n",
+    "# test_data = test_data\n",
+    "# test_label = test_label"
    ]
   },
   {
@@ -311,8 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_workers = 4 if cuda else 0 \n",
-    "context_size = 3\n",
+    "num_workers = 0 if cuda else 0 \n",
+    "context_size = 10\n",
     "\n",
     "# Training\n",
     "train_dataset = MyDataset(train_data, train_label, context_size = context_size)\n",
@@ -344,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "18482968\n"
      ]
     }
    ],
@@ -397,20 +397,18 @@
      "text": [
       "Simple_MLP(\n",
       "  (net): Sequential(\n",
-      "    (0): Linear(in_features=280, out_features=256, bias=True)\n",
+      "    (0): Linear(in_features=840, out_features=256, bias=True)\n",
       "    (1): ReLU()\n",
       "    (2): Linear(in_features=256, out_features=128, bias=True)\n",
       "    (3): ReLU()\n",
-      "    (4): Linear(in_features=128, out_features=128, bias=True)\n",
-      "    (5): ReLU()\n",
-      "    (6): Linear(in_features=128, out_features=71, bias=True)\n",
+      "    (4): Linear(in_features=128, out_features=71, bias=True)\n",
       "  )\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "model = Simple_MLP([40*(2*context_size+1), 256, 128, 128, 71])\n",
+    "model = Simple_MLP([40*(2*context_size+1), 256, 128, 71])\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr = 1e-4)\n",
     "device = torch.device(\"cuda\" if cuda else \"cpu\")\n",
@@ -512,25 +510,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss:  4.397214889526367 Time:  23.874462366104126 s\n",
-      "Testing Loss:  4.285812854766846\n",
-      "Testing Accuracy:  0.0 %\n",
+      "Training Loss:  1.3040772799598543 Time:  1236.9428977966309 s\n",
+      "Testing Loss:  1.2428102835803965\n",
+      "Testing Accuracy:  62.9323505206727 %\n",
       "====================\n",
-      "Training Loss:  4.2109527587890625 Time:  6.69052791595459 s\n",
-      "Testing Loss:  4.245952606201172\n",
-      "Testing Accuracy:  0.0 %\n",
+      "Training Loss:  1.1238512790929578 Time:  1186.8970832824707 s\n",
+      "Testing Loss:  1.187826589147933\n",
+      "Testing Accuracy:  64.34886336455251 %\n",
       "====================\n",
-      "Training Loss:  4.030324459075928 Time:  6.852315187454224 s\n",
-      "Testing Loss:  4.211531639099121\n",
-      "Testing Accuracy:  0.0 %\n",
+      "Training Loss:  1.0829762402275922 Time:  1183.971387386322 s\n",
+      "Testing Loss:  1.1551780581663476\n",
+      "Testing Accuracy:  65.20531144529359 %\n",
       "====================\n",
-      "Training Loss:  3.855067491531372 Time:  7.577102422714233 s\n",
-      "Testing Loss:  4.181249141693115\n",
-      "Testing Accuracy:  1.0 %\n",
+      "Training Loss:  1.0616782442362684 Time:  1193.2480232715607 s\n",
+      "Testing Loss:  1.1418744622715187\n",
+      "Testing Accuracy:  65.66809717983809 %\n",
       "====================\n",
-      "Training Loss:  3.685511589050293 Time:  6.970822811126709 s\n",
-      "Testing Loss:  4.155268669128418\n",
-      "Testing Accuracy:  2.0 %\n",
+      "Training Loss:  1.0478984611607325 Time:  1151.5767633914948 s\n",
+      "Testing Loss:  1.1319961975535777\n",
+      "Testing Accuracy:  65.8269053231725 %\n",
       "====================\n"
      ]
     }
