comment a testing line

--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -391,9 +391,9 @@
     }
    ],
    "source": [
-    "testinput = torch.rand(32, 40*(2*context_size+1)).to(device)\n",
-    "testoutput = model.forward(testinput)\n",
-    "sum(testoutput[0])"
+    "# testinput = torch.rand(32, 40*(2*context_size+1)).to(device)\n",
+    "# testoutput = model.forward(testinput)\n",
+    "# sum(testoutput[0])"
    ]
   },
   {
