changing batch size

--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -86,8 +86,8 @@
     "GLOBALTEST = False\n",
     "TOY = True # TOY mode use smaller dataset\n",
     "TRIALNUM = 5\n",
-    "STARTING_EPOCH = 30\n",
-    "MODEL_TO_LOAD = \"Toy/ToyTrial5Epoch30.pth\""
+    "STARTING_EPOCH = 0\n",
+    "MODEL_TO_LOAD = \"\""
    ]
   },
   {
@@ -260,7 +260,7 @@
     "# Training\n",
     "train_dataset = MyDataset(train_data, train_label, context_size = context_size)\n",
     "\n",
-    "train_loader_args = dict(shuffle=True, batch_size=256, num_workers=num_workers, pin_memory=True) if cuda\\\n",
+    "train_loader_args = dict(shuffle=True, batch_size=64, num_workers=num_workers, pin_memory=True) if cuda\\\n",
     "                    else dict(shuffle=True, batch_size=64)\n",
     "train_loader = data.DataLoader(train_dataset, **train_loader_args)\n",
     "\n",
