--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -78,14 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 1,
    "id": "e4f0df33-4298-4aca-a570-6d5b2f3118c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/9p/qc_cjl0j4k54nzckdg3j8ncw0000gn/T/ipykernel_89719/648668131.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mGLOBALTEST\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mTOY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# TOY mode use smaller dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mTRIALNUM\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mSTARTING_EPOCH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mMODEL_TO_LOAD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "GLOBALTEST = False\n",
-    "TOY = True # TOY mode use smaller dataset\n",
-    "TRIALNUM = 5\n",
+    "TOY = not torch.cuda.is_available()  # TOY mode use smaller dataset\n",
+    "TRIALNUM = 7\n",
     "STARTING_EPOCH = 0\n",
     "MODEL_TO_LOAD = \"\""
    ]
@@ -360,7 +372,7 @@
     }
    ],
    "source": [
-    "model = Simple_MLP([40*(2*context_size+1), 256, 238, 71])\n",
+    "model = Simple_MLP([40*(2*context_size+1), 256, 128, 128, 71])\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr = 5e-5)\n",
     "device = torch.device(\"cuda\" if cuda else \"cpu\")\n",
