testing running on Ubuntu machine

--- a/hw1p2.ipynb
+++ b/hw1p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e01f84b9-9c40-4a26-98ae-744d77d546f4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 4,
    "id": "5a33daa1-8862-4e0c-9963-921619db6e75",
    "metadata": {},
    "outputs": [
@@ -30,32 +30,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/harvey/Documents/Studies/Computer Science/Deep Learning/HW1P2\n"
+      "/home/harvey/Documents/test/Frame-Level-Speech-Classification\n"
      ]
     }
    ],
    "source": [
-    "!pwd"
+    "# !pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5b626017-0323-484e-b383-2b650470cb22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/harvey/.kaggle/kaggle.json'\n",
+      "Downloading idl-fall2021-hw1p2.zip to /home/harvey/Documents/test/Frame-Level-Speech-Classification\n",
+      " 97%|████████████████████████████████████▉ | 2.33G/2.40G [02:20<00:04, 15.5MB/s]"
+     ]
+    }
+   ],
    "source": [
     "# !kaggle competitions download -c idl-fall2021-hw1p2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "658cb366-16dd-4bda-be2e-3c27284ee6b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !unzip idl-fall2021-hw1p2.zip -d Data/"
+    "!unzip idl-fall2021-hw1p2.zip -d Data/"
    ]
   },
   {
@@ -737,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "toc-autonumbering": true
  },
